Create a new user functionality

--- a/static/templates/resetpwd.html
+++ b/static/templates/resetpwd.html
@@ -13,7 +13,7 @@
         </h5>
         <br>
         <label class="item item-input">
-            <input type="text" placeholder="email" ng-model="email">
+            <input type="email" placeholder="email" ng-model="email">
         </label>
 
         <label class="item-login">
