Delete a user functionality implementation

--- a/static/templates/tab-SuperUser.html
+++ b/static/templates/tab-SuperUser.html
@@ -9,6 +9,7 @@
 				<button class="button button-block button-stable" ng-click="groupOwners()">Top up</button>
 				<button class="button button-block button-stable" ng-click="enterShuttlesExpense()">Shuttle Expense</button>
 				<button class="button button-block button-stable" ng-click="createANewUser()">Create A New User</button>
+				<button class="button button-block button-stable" ng-click="deleteAUser()">Delete A User</button>
 				<button class="button button-block button-stable" ng-click="changeSuperUser()">Change Super User</button>
 				<button class="button button-block button-stable" ng-click="enterSaturdayCourtCost()">Saturday's Court Cost</button>
 				<button class="button button-block button-stable" ng-click="enterSundayCourtCost()">Sunday's Court Cost</button>
