--- a/static/templates/create_new_user.html
+++ b/static/templates/create_new_user.html
@@ -22,7 +22,7 @@
 					<input type="email" placeholder="Confirm Email" ng-model="confirmEmail">
 				</label>
                 <label class="item item-input  item-login">
-					<input type="number" placeholder="balance" ng-model="balance">
+					<input type="number" placeholder="Balance" ng-model="balance">
 				</label>
                 <label class="item item-input  item-login">
 					<input type="number" placeholder="Saturday Absent Weeks" ng-model="saturdayAbsentWeeks">
