--- a/static/templates/tab-SuperUser.html
+++ b/static/templates/tab-SuperUser.html
@@ -13,6 +13,8 @@
 				<button class="button button-block button-stable" ng-click="changeSuperUser()">Change Super User</button>
 				<button class="button button-block button-stable" ng-click="enterSaturdayCourtCost()">Saturday's Court Cost</button>
 				<button class="button button-block button-stable" ng-click="enterSundayCourtCost()">Sunday's Court Cost</button>
+				<button class="button button-block button-stable" ng-click="sendAnEmail()">Send An Email</button>
+				<button class="button button-block button-stable" ng-click="adhocCharge()">AdHoc Charge</button>
 			</ion-item>
 		</ion-list>
 	</ion-content>
