Bar color changes

--- a/static/templates/location.html
+++ b/static/templates/location.html
@@ -1,4 +1,4 @@
-<ion-header-bar align-title="center" class="bar-calm">
+<ion-header-bar align-title="center" class="bar-energized">
 <div class="buttons">
 	<button class="button icon-left ion-chevron-left button-clear"
 		ng-click="goBack()">Back</button>
