--- a/static/templates/resetpwd.html
+++ b/static/templates/resetpwd.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true" class="background">
-    <ion-header-bar align-title="center" class="bar-calm">
+    <ion-header-bar align-title="center" class="bar-energized">
         <div class="buttons">
             <button class="button icon-left ion-chevron-left button-clear" ng-click="goBack()">Back</button>
         </div>
