--- a/static/templates/tab-dash.html
+++ b/static/templates/tab-dash.html
@@ -4,7 +4,7 @@
       <ion-side-menus class="background">
        <ion-side-menu-content>
  
-            <ion-header-bar align-title="centre" class="bar-calm">
+            <ion-header-bar align-title="centre" class="bar-energized">
             <div class="buttons">
               <button class="button button-icon ion-navicon" ng-click="toggleLeft()" />
             </div>
