--- a/static/templates/tab-absents.html
+++ b/static/templates/tab-absents.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="true" class="background">
 
-<ion-header-bar align-title="centre" class="bar-calm">
+<ion-header-bar align-title="centre" class="bar-energized">
  <h1 class="title">Absents</h1>
 </ion-header-bar>
 
