--- a/static/templates/tab-members.html
+++ b/static/templates/tab-members.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true" class="background">
-    <ion-header-bar align-title="centre" class="bar-calm">
+    <ion-header-bar align-title="centre" class="bar-energized">
         <h1 class="title">Members</h1>
     </ion-header-bar>
 
