--- a/static/templates/change_super_user.html
+++ b/static/templates/change_super_user.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true" class="background">
-    <ion-header-bar align-title="centre" class="bar-energized">
+    <ion-header-bar align-title="centre" class="bar-assertive">
         <div class="buttons">
             <button class="button icon-left ion-chevron-left button-clear" ng-click="goBack()"> Back </button>
         </div>
