--- a/static/templates/tab-SuperUser.html
+++ b/static/templates/tab-SuperUser.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="true" class="background">
 
-	<ion-header-bar align-title="centre" class="bar-energized">
+	<ion-header-bar align-title="centre" class="bar-assertive">
 		<h1 class="title">Super User</h1>
 	</ion-header-bar>
 	<ion-content class="has-header" ng-controller = "SuperUser">
