Button car changes

--- a/static/templates/adhoc_charge.html
+++ b/static/templates/adhoc_charge.html
@@ -22,7 +22,7 @@
 				</label>
 
 				<label class="item-login">
-					<button class="button button-block button-calm" ng-click="charge()">Charge</button>
+					<button class="button button-block button-dark" ng-click="charge()">Charge</button>
 				</label>
 			</div>
 		</form>
