--- a/static/templates/create_new_user.html
+++ b/static/templates/create_new_user.html
@@ -33,7 +33,7 @@
                 <ion-checkbox ng-model="isAdmin">Is Admin?</ion-checkbox>
 
 				<label class="item-login">
-					<button class="button button-block button-calm" ng-click="createANewUser()">Create A New User</button>
+					<button class="button button-block button-dark" ng-click="createANewUser()">Create A New User</button>
 				</label>
 			</div>
 		</form>
