--- a/static/templates/resetpwd.html
+++ b/static/templates/resetpwd.html
@@ -17,7 +17,7 @@
         </label>
 
         <label class="item-login">
-			<button class="button button-block button-calm" ng-click="resetPwd(email)">Reset Password</button>
+			<button class="button button-block button-dark" ng-click="resetPwd(email)">Reset Password</button>
 		</label>
     </ion-content>
 </ion-view>
