--- a/static/templates/send_an_email.html
+++ b/static/templates/send_an_email.html
@@ -18,7 +18,7 @@
 				</label>
 
 				<label class="item-login">
-					<button class="button button-block button-calm" ng-click="send()">Send</button>
+					<button class="button button-block button-dark" ng-click="send()">Send</button>
 				</label>
 			</div>
 		</form>
