--- a/static/templates/tab-absents.html
+++ b/static/templates/tab-absents.html
@@ -5,8 +5,8 @@
 </ion-header-bar>
 
  <ion-content class="has-header padding" type="item-text-wrap" ng-controller="AbsentList">
- <button class="button button-block button-stable" ng-click="satAbsentList()">Saturday's Absentees</button>	
- <button class="button button-block button-stable" ng-click="sunAbsentList()">Sunday's Absentees</button>
+ <button class="button button-block button-dark" ng-click="satAbsentList()">Saturday's Absentees</button>
+ <button class="button button-block button-dark" ng-click="sunAbsentList()">Sunday's Absentees</button>
 
  <br>
  <h4>{{whichAbsents}}</h4>
