--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -11,7 +11,7 @@
 					<input type="password" placeholder="Password" ng-model="password">
 				</label>
 				<label class="item-login">
-					<button class="button button-block button-calm" ng-click="doLogin(username, password)">Login</button>
+					<button class="button button-block button-dark" ng-click="doLogin(username, password)">Login</button>
 				</label>
 
 				<div class="calm" style="text-align: center;" >
