--- a/static/templates/tab-SuperUser.html
+++ b/static/templates/tab-SuperUser.html
@@ -6,15 +6,15 @@
 	<ion-content class="has-header" ng-controller = "SuperUser">
 		<ion-list>
 			<ion-item>
-				<button class="button button-block button-stable" ng-click="groupOwners()">Top up</button>
-				<button class="button button-block button-stable" ng-click="enterShuttlesExpense()">Shuttle Expense</button>
-				<button class="button button-block button-stable" ng-click="createANewUser()">Create A New User</button>
-				<button class="button button-block button-stable" ng-click="deleteAUser()">Delete A User</button>
-				<button class="button button-block button-stable" ng-click="changeSuperUser()">Change Super User</button>
-				<button class="button button-block button-stable" ng-click="enterSaturdayCourtCost()">Saturday's Court Cost</button>
-				<button class="button button-block button-stable" ng-click="enterSundayCourtCost()">Sunday's Court Cost</button>
-				<button class="button button-block button-stable" ng-click="sendAnEmail()">Send An Email</button>
-				<button class="button button-block button-stable" ng-click="adhocCharge()">AdHoc Charge</button>
+				<button class="button button-block button-dark" ng-click="groupOwners()">Top up</button>
+				<button class="button button-block button-dark" ng-click="enterShuttlesExpense()">Shuttle Expense</button>
+				<button class="button button-block button-dark" ng-click="createANewUser()">Create A New User</button>
+				<button class="button button-block button-dark" ng-click="deleteAUser()">Delete A User</button>
+				<button class="button button-block button-dark" ng-click="changeSuperUser()">Change Super User</button>
+				<button class="button button-block button-dark" ng-click="enterSaturdayCourtCost()">Saturday's Court Cost</button>
+				<button class="button button-block button-dark" ng-click="enterSundayCourtCost()">Sunday's Court Cost</button>
+				<button class="button button-block button-dark" ng-click="sendAnEmail()">Send An Email</button>
+				<button class="button button-block button-dark" ng-click="adhocCharge()">AdHoc Charge</button>
 			</ion-item>
 		</ion-list>
 	</ion-content>
