--- a/static/templates/tab-dash.html
+++ b/static/templates/tab-dash.html
@@ -20,10 +20,10 @@
 		    <h4>Your account balance is: {{currentUser.balance | customCurrency}}</h4>
 		    <br>
 		    <div>
-		  	   <button class="button button-block button-stable" ng-if="showCantPlaySatBtn" ng-click="cantPlaySatBtnClick()">Can't play on Saturdays</button>
-                <button class="button button-block button-stable" ng-if="showWantPlaySatBtn" ng-click="wantPlaySatBtnClick()">Want to play on Saturdays</button>
-                <button class="button button-block button-stable" ng-if="showCantPlaySunBtn" ng-click="cantPlaySunBtnClick()">Can't play on Sundays</button>
-                <button class="button button-block button-stable" ng-if="showWantPlaySunBtn" ng-click="wantPlaySunBtnClick()">Want to play on Sundays</button>
+		  	   <button class="button button-block button-dark" ng-if="showCantPlaySatBtn" ng-click="cantPlaySatBtnClick()">Can't play on Saturdays</button>
+                <button class="button button-block button-dark" ng-if="showWantPlaySatBtn" ng-click="wantPlaySatBtnClick()">Want to play on Saturdays</button>
+                <button class="button button-block button-dark" ng-if="showCantPlaySunBtn" ng-click="cantPlaySunBtnClick()">Can't play on Sundays</button>
+                <button class="button button-block button-dark" ng-if="showWantPlaySunBtn" ng-click="wantPlaySunBtnClick()">Want to play on Sundays</button>
 		  	</div>
 		  	<br>
 		  	<H4>Your most recent transactions:</H4>
