--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-/* Empty. Add your own CSS if you like */
 .background {
     background: url("../img/background.jpg") no-repeat center center fixed;
     background-attachment:fixed;
@@ -11,9 +10,9 @@
 }
 
 .item-login {
-    background-color: transparent;
+    background-color: white;
     padding:5px;
- }
+}
 
 .loginlist{
   width: 170px auto;
