Small UI change

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,12 +31,12 @@
 
 .adhocCharge{
   width: 170px auto;
-  margin: 20px auto;
+  margin: auto;
 }
 
 .sendAnEmail{
   width: 170px auto;
-  margin: 40px auto;
+  margin: auto;
 }
 
 textarea {
