Adding run sunday expense functionality

--- a/static/templates/tab-SuperUser.html
+++ b/static/templates/tab-SuperUser.html
@@ -7,6 +7,7 @@
 		<ion-list>
 			<ion-item>
 				<button class="button button-block button-dark" ng-click="groupOwners()">Top up</button>
+				<button class="button button-block button-dark" ng-click="runSundayExpense()">Run Sunday Expense</button>
 				<button class="button button-block button-dark" ng-click="enterShuttlesExpense()">Shuttle Expense</button>
 				<button class="button button-block button-dark" ng-click="createANewUser()">Create A New User</button>
 				<button class="button button-block button-dark" ng-click="deleteAUser()">Delete A User</button>
