--- a/static/templates/tab-SuperUser.html
+++ b/static/templates/tab-SuperUser.html
@@ -9,6 +9,7 @@
 				<button class="button button-block button-dark" ng-click="groupOwners()">Top up</button>
 				<button class="button button-block button-dark" ng-click="runSundayExpense()">Run Sunday Expense</button>
 				<button class="button button-block button-dark" ng-click="enterShuttlesExpense()">Shuttle Expense</button>
+				<button class="button button-block button-dark" ng-click="makeSomeoneSundayAbsent()">Make Someone Sunday Absent</button>
 				<button class="button button-block button-dark" ng-click="createANewUser()">Create A New User</button>
 				<button class="button button-block button-dark" ng-click="deleteAUser()">Delete A User</button>
 				<button class="button button-block button-dark" ng-click="changeSuperUser()">Change Super User</button>
